--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
       </div>
     </section> -->
     <section class="clientSection">
+      <p>
+        Pablo es el mejor!!!!
+      </p>
       <div class="clientLogo">
         <img src="images\logos\airbnb-logo.svg" alt="" class="" />          
         <img src="images\logos\google-logo.svg" alt="" class="" /> 
