[BCN-PT-072022] - Mava Figallo

--- a/index.html
+++ b/index.html
@@ -22,17 +22,17 @@
     <nav id="nav-bar">
       <ul class="navMenu">
         <li class="menu">
-          <a href="#home">Home</a>
+          <a href="/">Home</a>
         </li>
         <li class="menu">
-          <a href="#\project.html">Project</a>
+          <a href="/project.html">Project</a>
         </li>
         <li class="menu">
-          <a href="#\services.html">Services</a>
+          <a href="/services.html">Services</a>
         </li>
       </ul>
     </nav>
-    <a href="\contactUs.html" class="contactUs">Contact Us</a>
+    <a href="/contactUs.html" class="contactUs">Contact Us</a>
   </header>
   <!-- NAVBAR -->
   <!-- SECTION CONTAINER -->
@@ -44,7 +44,7 @@
           <h1>Empower Your Bussines With Stunning Design!</h1>
           <div class="heroParagraph">
             <p>
-              Cicle is a digital design and development
+              Circle is a digital design and development
               studio. We design and develop astonishing
               websites and mobile apps
             </p>
@@ -54,17 +54,14 @@
             <a href="/project.html" class="seeOurWorkButton">See our work</a>
           </div>
         </div>
-        <div class="heroImages">
-          <img src="images\hero-section\card-1.png" alt="credit card image" class="card1" />
-          <img src="images\hero-section\hero-image.png" alt="hero imagen" class="heroImage" />
-          <img src="images\hero-section\card-2.png" alt="like image" class="card2" />
+        <div class="heroImagesSection">
+          <img src="./images/hero-section/card-1.png" alt="choose your credit image" class="card1" />
+          <img src="./images/hero-section/hero-image.png" alt="hero image" class="heroImage" />
+          <img src="./images/hero-section/card-2.png" alt="like image" class="card2" />
         </div>
       </div>
-    </section> -->
-    <section class="clientSection">
-      <p>
-        Pablo es el mejor!!!!
-      </p>
+    </section>
+    <!-- <section class="clientSection">    
       <div class="clientLogo">
         <img src="images\logos\airbnb-logo.svg" alt="" class="" />          
         <img src="images\logos\google-logo.svg" alt="" class="" /> 
@@ -72,7 +69,7 @@
         <img src="images\logos\fedex-logo.svg" alt="" class="" /> 
         <img src="images\logos\amazon-logo.svg----------" alt="" class="" /> 
       </div>
-    </section>
+    </section> -->
     <!-- HERO SECTION -->
   </main>
   <!-- SECTION CONTAINER -->
