[BCN-PT-072022] mava Figallo

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <!-- NAVBAR -->
   <!-- SECTION CONTAINER -->
   <main>
-  <!-- HERO SECTION -->
+    <!-- HERO SECTION -->
     <section class="heroSection">
       <div class="heroContainer">
         <div class="heroTitle">
@@ -61,16 +61,61 @@
         </div>
       </div>
     </section>
-    <!-- <section class="clientSection">    
-      <div class="clientLogo">
-        <img src="images\logos\airbnb-logo.svg" alt="" class="" />          
-        <img src="images\logos\google-logo.svg" alt="" class="" /> 
-        <img src="images\logos\microsoft-logo.svg" alt="" class="" /> 
-        <img src="images\logos\fedex-logo.svg" alt="" class="" /> 
-        <img src="images\logos\amazon-logo.svg----------" alt="" class="" /> 
-      </div>
-    </section> -->
     <!-- HERO SECTION -->
+    <!-- CLIENT SECTION -->
+    <section class="clientSection">
+      
+      <div class="clientLogo">
+        <div class="logosContainer">
+          <div>
+            <img src="./images/logos/airbnb-logo.svg" alt="airbnb logo" />
+          </div>
+          <div>
+            <img src="./images/logos/google-logo.svg" alt="google logo" />
+          </div>
+          <div>
+            <img src="./images/logos/microsoft-logo.svg" alt="microsoft logo" />
+          </div>
+          <div>
+            <img src="./images/logos/fedex-logo.svg" alt="fedex logo" />
+          </div>
+          <div>
+            <img src="./images/logos/amazon-logo.svg" class="amazon" alt="amazon logo" />
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- CLIENT SECTION -->
+    <!-- PROJECT SECTION -->
+
+    <section class="projectSection">
+      <!-- <div class="boxContainer">
+        <div id="recentProjects">
+          <h2 class="textH2">Recent Projects</h2>
+        </div> -->
+        <div class="articlesContainer">
+          <article class="articleDetails">
+            <img src="./images/projects-section/1.jpg" alt="" class="imgSize">
+            <h3 class="textH3">Simplify</h3>
+            <p class="textSize">UI Design & App Development</p>
+            <a class="learnMore" href="project.html">Learn More </a>
+          </article>
+          <article class="articleDetails">
+            <img src="./images/projects-section/2.jpg" alt="" class="imgSize">
+            <h3 class="textH3">Dashcoin</h3>
+            <p class="textSize">Web Development</p>
+            <a class="learnMore" href="project.html">Learn More </a>
+          </article>
+          <article class="articleDetails" alt="Devide Icon">
+            <img src="./images/projects-section/3.jpg" alt="" class="imgSize">
+            <h3 class="textH3">Vectorify</h3>
+            <p class="textSize">User Experience Design</p>
+            <a class="learnMore" href="project.html">Learn More </a>
+          </article>
+        </div>
+      </div>
+    </section>
+
   </main>
   <!-- SECTION CONTAINER -->
 
