[BCN-PT-072022] mava Figallo

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <a href="/contactUs.html" class="contactUs">Contact Us</a>
   </header>
   <!-- NAVBAR -->
-  <!-- SECTION CONTAINER -->
+  <!-- MAIN CONTAINER ini-->
   <main>
     <!-- HERO SECTION -->
     <section class="heroSection">
@@ -64,7 +64,7 @@
     <!-- HERO SECTION -->
     <!-- CLIENT SECTION -->
     <section class="clientSection">
-      
+
       <div class="clientLogo">
         <div class="logosContainer">
           <div>
@@ -89,38 +89,151 @@
     <!-- PROJECT SECTION -->
 
     <section class="projectSection">
-      <!-- <div class="boxContainer">
-        <div id="recentProjects">
-          <h2 class="textH2">Recent Projects</h2>
-        </div> -->
-        <div class="articlesContainer">
-          <article class="articleDetails">
-            <img src="./images/projects-section/1.jpg" alt="" class="imgSize">
+      <h2>Recent Projects</h2>
+      <div class="articlesContainer">
+        <article class="articleDetails">
+          <img src="./images/projects-section/1.jpg" alt="" class="styleImg">
+          <div class="boxInfo">
             <h3 class="textH3">Simplify</h3>
-            <p class="textSize">UI Design & App Development</p>
+            <div class="paragrahP">
+              <p>UI Design & App Development</p>
+            </div>
             <a class="learnMore" href="project.html">Learn More </a>
-          </article>
-          <article class="articleDetails">
-            <img src="./images/projects-section/2.jpg" alt="" class="imgSize">
+          </div>
+        </article>
+        <article class="articleDetails">
+          <img src="./images/projects-section/2.jpg" alt="" class="styleImg">
+          <div class="boxInfo">
             <h3 class="textH3">Dashcoin</h3>
-            <p class="textSize">Web Development</p>
+            <div class="paragrahP">
+              <p>Web Development</p>
+            </div>
             <a class="learnMore" href="project.html">Learn More </a>
-          </article>
-          <article class="articleDetails" alt="Devide Icon">
-            <img src="./images/projects-section/3.jpg" alt="" class="imgSize">
+          </div>
+        </article>
+        <article class="articleDetails">
+          <img src="./images/projects-section/3.jpg" alt="" class="styleImg">
+          <div class="boxInfo">
             <h3 class="textH3">Vectorify</h3>
-            <p class="textSize">User Experience Design</p>
+            <div class="paragrahP">
+              <p>User Experience Design</p>
+            </div>
             <a class="learnMore" href="project.html">Learn More </a>
-          </article>
-        </div>
+          </div>
+        </article>
       </div>
     </section>
 
-  </main>
-  <!-- SECTION CONTAINER -->
+    <!-- PROJECT SECTION -->
+    <!-- TESTIMONIAL SECTION  -->
 
+    <section class="testimonialSection">
+      <article class="testimonialContainer">
+
+        <img src="./images/testimonial-section/memoji-1.png" alt="" class="emoji1">
+        <img src="./images/testimonial-section/memoji-2.png" alt="" class="emoji2">
+        <img src="./images/testimonial-section/memoji-3.png" alt="" class="emoji3">
+        <img src="./images/testimonial-section/memoji-4.png" alt="" class="emoji4">
+
+        <h2 class="opinions">
+          Hear What Our Clients Have to Say
+        </h2>
+        <div class="opinionClient">
+          <p>“Circle helped us through every stage of our startup. We really enjoyed working with you.”</p>
+        </div>
+        <div class="clientId">
+          <img src="./images/testimonial-section/profile.png" alt="" class="client">
+          <div class="textH4">
+            <div class="watson">
+              <p>Kristin Watson</p>
+            </div>
+            <div class="booking">
+              <p>Booking.com</p>
+            </div>
+          </div>
+        </div>
+      </article>
+    </section>
+
+    <!-- TESTIMONIAL SECTION  -->
+    <!-- SERVICES SECTION ini-->
+
+    <section class="projectSection">
+      <h2>Our Services</h2>
+      <div class="articlesContainer">
+        <article class="articleDetails">
+          <div class="iconServices1"></div>
+          <div class="boxInfo">
+            <h3 class="textH3">User interface Design</h3>
+            <div class="paragrahk">
+              <p>Circle provides you with a stunning user interface design that is accessible to everyone.</p>
+            </div>
+            <a class="learnMore" href="services.html">Learn More </a>
+          </div>
+        </article>
+        <article class="articleDetails">
+          <div class="iconServices2"></div>
+          <div class="boxInfo">
+            <h3 class="textH3">User Experience Design</h3>
+            <div class="paragrahk">
+              <p>Circle always focuses on delivering the best user experience to your customers.</p>
+            </div>
+            <a class="learnMore" href="services.html">Learn More </a>
+          </div>
+        </article>
+        <article class="articleDetails">
+          <div class="iconServices3"></div>
+          <div class="boxInfo">
+            <h3 class="textH3">Application Development</h3>
+            <div class="paragrahk">
+              <p>We develop high-quality mobile and web applications using the latest technology stack.</p>
+            </div>
+            <a class="learnMore" href="services.html">Learn More </a>
+          </div>
+        </article>
+      </div>
+    </section>
+    <!-- SERVICES SECTION end-->
+    <!-- CTA SECTION ini-->
+    <section class="ctaSection">
+      <footer class="preFooterSection">
+        <h2 class="anyQuestion">Do you have any questions?</h2>
+        <p>Let us help you</p>
+        <div class="formContainer">
+          <form action="" class="content">
+            <div class="enterEmail">
+              <span class="envelop">
+                <img src="./images/newsletter/icon/mail.svg" alt="" class="envelopIcon">
+              </span>
+              <input id="email" name="email" type="email" placeholder="Enter your email">
+              <input id="submit" type="submit" value="Subscribe">
+            </div>
+          </form>
+        </div>
+      </footer>
+    </section>
+    <!-- CTA SECTION end-->
+  </main>
+  <!-- MAIN CONTAINER end-->
+  <!-- FOOTER SECTION ini-->
+  <footer class="footerSection">
+    <section class="footerContainer">
+      <article class="footerArticle">
+        <img src="./images/logos/circle.svg" alt="Logo Circle">
+        <address>2972 Westheimer Rd. <br> Santa Ana, Illinois 85486</address>
+      </article>
+      <article class="footerLinks">
+        <a href="#">Team</a>
+        <a href="/services.html">Services</a>
+        <a href="#">About Us</a>
+        <a href="#">Press</a>
+        <a href="/project.html">Project</a>
+        <a href="#">Privacy Policy</a>
+      </article>
+    </section>
+  </footer>
+    <!-- FOOTER SECTION end-->
 
   <!-- <script type="text/javascript" src="./js/index.js"></script> -->
 </body>
-
 </html>
