--- a/contactUs.html
+++ b/contactUs.html
@@ -1,21 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
-    <title>Mid Term Project</title>
-  </head>
+<head>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./css/style.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
+  <title>Mid Term Project</title>
+</head>
 
-<form>
+<!-- NAVBAR -->
+<header>
+  <div class="logoCircle">
+    <img src="/images/logos/circle.svg" alt="Logo Circle">
+  </div>
+  <nav id="nav-bar">
+    <ul class="navMenu">
+      <li class="menu">
+        <a href="/">Home</a>
+      </li>
+      <li class="menu">
+        <a href="/project.html">Project</a>
+      </li>
+      <li class="menu">
+        <a href="/services.html">Services</a>
+      </li>
+    </ul>
+  </nav>
+  <a href="/contactUs.html" class="contactUs">Contact Us</a>
+</header>
+<!-- NAVBAR -->
 
 
 
-</form>
+<!-- FOOTER SECTION ini-->
+<footer class="footerSection">
+  <section class="footerContainer">
+    <article class="footerArticle">
+      <img src="./images/logos/circle.svg" alt="Logo Circle">
+      <address>2972 Westheimer Rd. <br> Santa Ana, Illinois 85486</address>
+    </article>
+    <article class="footerLinks">
+      <a href="#">Team</a>
+      <a href="/services.html">Services</a>
+      <a href="#">About Us</a>
+      <a href="#">Press</a>
+      <a href="/project.html">Project</a>
+      <a href="#">Privacy Policy</a>
+    </article>
+  </section>
+</footer>
+<!-- FOOTER SECTION end-->
 
 </html>
