[BCN-PT-072022] mava Figallo

--- a/contactUs.html
+++ b/contactUs.html
@@ -26,16 +26,94 @@
         <a href="/project.html">Project</a>
       </li>
       <li class="menu">
-        <a href="/services.html">Services</a>
+        <a href="/index.html#ourServices">Services</a>
       </li>
     </ul>
   </nav>
   <a href="/contactUs.html" class="contactUs">Contact Us</a>
 </header>
 <!-- NAVBAR -->
+<!-- FORM -->
+
+<main>
+  <section class="contactUsSection2">
+      <h1>Contact Us</h1>
+      <div class="contactUsContainer">
+          <form
+              name="post_info-form"
+              class="contactForm"
+          >
+              <div class="inputWraper name">
+                  <label for="name" class="contactTitle"
+                      >Full Name *
+                  </label>
+                  <input
+                      type="text"
+                      class="contactTextField"
+                      maxlength="250"
+                      name="name"
+                      data-name="Name"
+                      placeholder="Enter your full name"
+                      required=""
+                  />
+              </div>
+              <div class="inputWraper email">
+                  <label for="email" class="contactTitle"
+                      >Email</label
+                  >
+                  <input
+                      type="email"
+                      class="contactTextField"
+                      maxlength="250"
+                      name="email"
+                      placeholder="Enter your email"
+                  />
+              </div>
+              <div class="inputWrape phone">
+                  <label for="phone" class="contactTitle"
+                      >Phone</label
+                  ><input
+                      type="tel"
+                      class="contactTextField"
+                      maxlength="256"
+                      name="phone"
+                      data-name="Name 3"
+                      placeholder="Enter your phone"
+                      id="phone"
+                  />
+              </div>
+              <div class="inputWraper message">
+                  <label for="field" class="contactTitle"
+                      >Message *</label
+                  ><textarea
+                      placeholder="Write your message here..."
+                      maxlength="1000"
+                      name="field"
+                      required=""
+                      data-name="field"
+                      class="contactTextField textAreaField"
+                  ></textarea>
+              </div>
+
+              <button
+                  type="submit"
+                  value=""
+                  data-wait="Please wait..."
+                  class="buttonForm"
+                  type="submit"
+              >
+                  Submit
+              </button>
+          </form>
+      </div>
+  </section>
+</main>
 
 
 
+
+
+<!-- FORM -->
 <!-- FOOTER SECTION ini-->
 <footer class="footerSection">
   <section class="footerContainer">
@@ -44,12 +122,12 @@
       <address>2972 Westheimer Rd. <br> Santa Ana, Illinois 85486</address>
     </article>
     <article class="footerLinks">
-      <a href="#">Team</a>
+      <a href="/comimngSoon.html">Team</a>
       <a href="/services.html">Services</a>
-      <a href="#">About Us</a>
-      <a href="#">Press</a>
+      <a href="/comimngSoon.html">About Us</a>
+      <a href="/comimngSoon.html">Press</a>
       <a href="/project.html">Project</a>
-      <a href="#">Privacy Policy</a>
+      <a href="/comimngSoon.html">Privacy Policy</a>
     </article>
   </section>
 </footer>
