--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <a href="/project.html">Project</a>
         </li>
         <li class="menu">
-          <a href="/services.html">Services</a>
+          <a href="#ourServices">Services</a>
         </li>
       </ul>
     </nav>
@@ -98,7 +98,7 @@
             <div class="paragrahP">
               <p>UI Design & App Development</p>
             </div>
-            <a class="learnMore" href="project.html">Learn More </a>
+            <a class="learnMore" href="/project.html">Learn More </a>
           </div>
         </article>
         <article class="articleDetails">
@@ -108,7 +108,7 @@
             <div class="paragrahP">
               <p>Web Development</p>
             </div>
-            <a class="learnMore" href="project.html">Learn More </a>
+            <a class="learnMore" href="/project.html">Learn More </a>
           </div>
         </article>
         <article class="articleDetails">
@@ -118,7 +118,7 @@
             <div class="paragrahP">
               <p>User Experience Design</p>
             </div>
-            <a class="learnMore" href="project.html">Learn More </a>
+            <a class="learnMore" href="/project.html">Learn More </a>
           </div>
         </article>
       </div>
@@ -152,11 +152,13 @@
             </div>
           </div>
         </div>
-      </article>
+      </article>  
+         <div id="ourServices"></div> 
+      <!-- <a name="Our Services"></a> -->
     </section>
 
     <!-- TESTIMONIAL SECTION  -->
-    <!-- SERVICES SECTION ini-->
+    <!-- SERVICES SECTION -->
 
     <section class="projectSection">
       <h2>Our Services</h2>
@@ -168,7 +170,7 @@
             <div class="paragrahk">
               <p>Circle provides you with a stunning user interface design that is accessible to everyone.</p>
             </div>
-            <a class="learnMore" href="services.html">Learn More </a>
+            <a class="learnMore" href="/contactUs.html">Learn More </a>
           </div>
         </article>
         <article class="articleDetails">
@@ -178,7 +180,7 @@
             <div class="paragrahk">
               <p>Circle always focuses on delivering the best user experience to your customers.</p>
             </div>
-            <a class="learnMore" href="services.html">Learn More </a>
+            <a class="learnMore" href="/contactUs.html">Learn More </a>
           </div>
         </article>
         <article class="articleDetails">
@@ -188,7 +190,7 @@
             <div class="paragrahk">
               <p>We develop high-quality mobile and web applications using the latest technology stack.</p>
             </div>
-            <a class="learnMore" href="services.html">Learn More </a>
+            <a class="learnMore" href="/contactUs.html">Learn More </a>
           </div>
         </article>
       </div>
@@ -222,14 +224,14 @@
         <img src="./images/logos/circle.svg" alt="Logo Circle">
         <address>2972 Westheimer Rd. <br> Santa Ana, Illinois 85486</address>
       </article>
-      <article class="footerLinks">
-        <a href="#">Team</a>
-        <a href="/services.html">Services</a>
-        <a href="#">About Us</a>
-        <a href="#">Press</a>
-        <a href="/project.html">Project</a>
-        <a href="#">Privacy Policy</a>
-      </article>
+     <article class="footerLinks">
+      <a href="/comimngSoon.html">Team</a>
+      <a href="/services.html">Services</a>
+      <a href="/comimngSoon.html">About Us</a>
+      <a href="/comimngSoon.html">Press</a>
+      <a href="/project.html">Project</a>
+      <a href="/comimngSoon.html">Privacy Policy</a>
+    </article>
     </section>
   </footer>
     <!-- FOOTER SECTION end-->
