--- a/project.html
+++ b/project.html
@@ -1,18 +1,159 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
-    <title>Mid Term Project</title>
-  </head>
+<head>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./css/style.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
+  <title>Mid Term Project</title>
+</head>
 
 <body>
+  <!-- NAVBAR -->
+  <header>
+    <div class="logoCircle">
+      <img src="/images/logos/circle.svg" alt="Logo Circle">
+    </div>
+    <nav id="nav-bar">
+      <ul class="navMenu">
+        <li class="menu">
+          <a href="/">Home</a>
+        </li>
+        <li class="menu">
+          <a href="/project.html">Project</a>
+        </li>
+        <li class="menu">
+          <a href="/index.html#ourServices">Services</a>
+        </li>
+      </ul>
+    </nav>
+    <a href="/contactUs.html" class="contactUs">Contact Us</a>
+  </header>
+  <!-- NAVBAR -->
+  <main>
+    <!-- PROJECT SECTION -->
+    <section class="projectSectionHeader">
+      <article class="articleDetailsProjects">
+        <h1>Simplify</h1>
+        <div>
+          <p>UI Design & App Development</p>
+          <p>Completed on June 22, 2021</p>
+        </div>
+        <div class="articlesContainerHeader">
+          <div>
+            <img src="./images/projects-section/1.jpg" alt="" class="styleImgHeader">
+            <div class="boxInfoProjects">
+              <div class="paragrahpX">
+                <p>Aliqua id fugiat nostrud irure ex duis ea quis id quis ad et. Sunt qui esse pariatur duis deserunt
+                  mollit dolore cillum minim tempor enim. Elit aute irure tempor cupidatat incididunt sint deserunt ut
+                  voluptate aute id deserunt nisi. Aliqua id fugiat nostrud irure ex duis ea quis id quis ad et. Sunt
+                  qui esse pariatur duis deserunt mollit dolore cillum minim tempor enim. Elit aute irure tempor
+                  cupidatat incididunt sint deserunt ut voluptate aute id deserunt nisi.Aliqua id fugiat nostrud irure
+                  ex duis ea quis id quis ad et. Sunt quix duis ea quis id quis ad et. Sunt qui esse pariatur duis
+                  deserunt mollit dolore cillum minim tempor enim. Elit aute irure tempor cupidatat incididunt sint
+                  deserunt ut voluptate aute id deserunt nisi.</p>
+                <p>Aliqua id fugiat nostrud irure ex duis ea quis id quis ad et. Sunt qui esse pariatur duis deserunt
+                  mollit dolore cillum minim tempor enim. Elit aute irure tempor cupidatat incididunt sint deserunt ut
+                  voluptate aute id deserunt nisi.Aliqua id fugiat nostrud irure ex duis ea quis id quis ad e dolore
+                  cillum minim tempor enim. Elit aute irure tempor cupidatat incididunt sint deserunt ut voluptate aute
+                  id deserunt nisis ea quis id quis ad et. Sunt qui esse pariatur duis deserunt mollit dolore cillum
+                  minim tempor enim. Elit aute irure tempor cupidatat incididunt sint deserunt ut voluptate aute id
+                  deserunt nisi.Aliqua id fugiat nostrud irure ex duis ea quis id quis ad e dolore cillum minim tempor
+                  enim. Elit aute irure tempor cupidatat incididunt sint deserunt ut voluptate aute id deserunt nis
+                  cillum minim tempor enim.
+              </div>
+              <a class="learnMore" href="project.html">Learn More </a>
+            </div>
+      </article>
+      </div>
+    </section>
+
+    <!-- PROJECT SECTION -->
+    <!-- OTHER PROJECTS SECTION -->
+
+    <section class="projectSection">
+      <h2>Other Projects</h2>
+      <div class="articlesContainer">
+        <article class="articleDetails">
+          <img src="./images/projects-section/4.jpg" alt="" class="styleImg">
+          <div class="boxInfo">
+            <h3 class="textH3">Orbit</h3>
+            <div class="paragrahP">
+              <p>UI Design</p>
+            </div>
+            <a class="learnMore" href="/contactUs.html">Learn More </a>
+          </div>
+        </article>
+        <article class="articleDetails">
+          <img src="./images/projects-section/5.jpg" alt="" class="styleImg">
+          <div class="boxInfo">
+            <h3 class="textH3">Purify</h3>
+            <div class="paragrahP">
+              <p>UI/UX Design</p>
+            </div>
+            <a class="learnMore" href="/contactUs.html">Learn More </a>
+          </div>
+        </article>
+        <article class="articleDetails">
+          <img src="./images/projects-section/6.jpg" alt="" class="styleImg">
+          <div class="boxInfo">
+            <h3 class="textH3">CryptoPie</h3>
+            <div class="paragrahP">
+              <p>App Development</p>
+            </div>
+            <a class="learnMore" href="/contactUs.html">Learn More </a>
+          </div>
+        </article>
+      </div>
+    </section>
+
+    <!-- OTHER PROJECTS SECTION -->
+    <!-- CTA SECTION ini-->
+    <section class="ctaSection">
+      <footer class="preFooterSection">
+        <h2 class="anyQuestion">Do you have any questions?</h2>
+        <p>Let us help you</p>
+        <div class="formContainer">
+          <form action="" class="content">
+            <div class="enterEmail">
+              <span class="envelop">
+                <img src="./images/newsletter/icon/mail.svg" alt="" class="envelopIcon">
+              </span>
+              <input id="email" name="email" type="email" placeholder="Enter your email">
+              <input id="submit" type="submit" value="Subscribe">
+            </div>
+          </form>
+        </div>
+      </footer>
+    </section>
+    <!-- CTA SECTION end-->
+  </main>
+  <!-- MAIN CONTAINER end-->
+  <!-- FOOTER SECTION ini-->
+  <footer class="footerSection">
+    <section class="footerContainer">
+      <article class="footerArticle">
+        <img src="./images/logos/circle.svg" alt="Logo Circle">
+        <address>2972 Westheimer Rd. <br> Santa Ana, Illinois 85486</address>
+      </article>
+      <article class="footerLinks">
+        <a href="/comimngSoon.html">Team</a>
+        <a href="/services.html">Services</a>
+        <a href="/comimngSoon.html">About Us</a>
+        <a href="/comimngSoon.html">Press</a>
+        <a href="/project.html">Project</a>
+        <a href="/comimngSoon.html">Privacy Policy</a>
+      </article>
+    </section>
+  </footer>
+  <!-- FOOTER SECTION end-->
+
+
+
 
 
   <script type="text/javascript" src="./js/index.js"></script>
